# neuro-green

./: .gitignore  COMMUNICATION.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint_and_test.yaml
green/: data_utils.py  spd_layers.py  wavelet_layers.py
green/research_code/: crossval_utils.py  example.ipynb  example_wo_wav.ipynb
research_code/: crossval_utils.py  example.ipynb  example_wo_wav.ipynb  pl_utils.py  requirements.txt
tests/: conftest.py  test_data_utils.py  test_spd_layers.py  test_wavelet_layers.py
